--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="CV & Resume Template" />
-	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cvio, portfolio" />
-	<meta name="author" content="beshleyua" />
-
+	
 	<!-- Title -->
-	<title>Anthony Smith | Front- End Web Developer</title>
+	<title>Anthony Smith | Front-End Web Developer</title>
 
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic" rel="stylesheet">
@@ -27,6 +24,10 @@
 	<link rel="stylesheet" href="css/brands.css" />
 	<link rel="stylesheet" href="css/solid.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+
+	<!-- Favicon  -->
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 	 
 	<!--<link rel="stylesheet" href="css/theme-colors/blue.css" />
@@ -126,6 +127,7 @@
 		
 		<!-- Wrapper -->
 		<div class="wrapper">	
+			<!-- Testing -->
 
 			<!-- Section Started -->
 			<div class="section started" id="section-started">
@@ -142,14 +144,18 @@
 					<div class="vertical-center">
 						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
-								Hey, I’m <strong>Anthony Smith</strong>, a Front-End Web Developer <br />
+								Hi, I’m <strong>Anthony</strong>, a Front-End Web Developer <br />
 								and Designer based in Grand Rapids, Michigan. 
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>I code cool <strong>websites</strong></p>
-								<p>I develop <strong>mobile apps</strong></p>
-								<p>I love <strong>javascript</strong></p>
-								<p>I solve <strong>problems</strong></p>
+								<p>Hello. </p>
+									<p>Welcome to my <strong>Portfolio </strong></p>
+									<p>My name is <strong>Anthony</strong></p>
+									<p>I code professional <strong>websites</strong></p>
+									<p>I develop useful <strong>web apps</strong></p>
+									<p>I love <strong>javascript</strong></p>
+									<p>I learn <strong>everyday</strong></p>
+									<p>I solve <strong>problems</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
@@ -163,7 +169,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s">Copyright © 2019 Website by Anthony Smith</p>
+				<p class="animated fadeIn delay-3s">Copyright © 2020 Website by Anthony Smith</p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
@@ -171,7 +177,7 @@
 					<a target="_blank" href="https://github.com/anthonys1760?tab=repositories">
 						<span class="icon fab fa-github"></span>
 					</a>
-					<a target="_blank" href="https://www.instagram.com/">
+					<a target="_blank" href="https://www.instagram.com/tonycodes2059">
 						<span class="icon fab fa-instagram"></span>
 					</a>
 				</div>
