--- a/index.html
+++ b/index.html
@@ -19,13 +19,32 @@
 
 	<script type="text/javascript">
 		window._mfq = window._mfq || [];
-		(function() {
-		  var mf = document.createElement("script");
-		  mf.type = "text/javascript"; mf.defer = true;
-		  mf.src = "//cdn.mouseflow.com/projects/ae2e15e6-8432-4c0b-a63d-fb97184cd063.js";
-		  document.getElementsByTagName("head")[0].appendChild(mf);
+		(function () {
+			var mf = document.createElement("script");
+			mf.type = "text/javascript";
+			mf.defer = true;
+			mf.src = "//cdn.mouseflow.com/projects/ae2e15e6-8432-4c0b-a63d-fb97184cd063.js";
+			document.getElementsByTagName("head")[0].appendChild(mf);
 		})();
-	  </script>
+	</script>
+
+	<!-- Hotjar Tracking Code for www.anthonysdigital.net -->
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () {
+				(h.hj.q = h.hj.q || []).push(arguments)
+			};
+			h._hjSettings = {
+				hjid: 2462518,
+				hjsv: 6
+			};
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script');
+			r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
 
 	<!-- Meta -->
 	<meta charset="UTF-8">
