Added Tracking Pixels and Analytics to all pages

--- a/contacts_image.html
+++ b/contacts_image.html
@@ -57,7 +57,40 @@
 		  mf.src = "//cdn.mouseflow.com/projects/ae2e15e6-8432-4c0b-a63d-fb97184cd063.js";
 		  document.getElementsByTagName("head")[0].appendChild(mf);
 		})();
-	  </script>
+	</script>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105675198-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-105675198-1');
+	</script>
+
+	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-N44SP6L"></script>
+
+	<!-- Hotjar Tracking Code for www.anthonysdigital.net -->
+	<script>
+		(function (h, o, t, j, a, r) {
+			h.hj = h.hj || function () {
+				(h.hj.q = h.hj.q || []).push(arguments)
+			};
+			h._hjSettings = {
+				hjid: 2462518,
+				hjsv: 6
+			};
+			a = o.getElementsByTagName('head')[0];
+			r = o.createElement('script');
+			r.async = 1;
+			r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+			a.appendChild(r);
+		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+	</script>
 	  
 </head>
 
