--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	</script>
 
 	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-N44SP6L"></script>
-
+	
+	<!-- Mouseflow Heatmap Script -->
 	<script type="text/javascript">
 		window._mfq = window._mfq || [];
 		(function () {
