--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html lang="en-US">
 
 <head>
+	
+	<!-- Google Tag Manager -->
+	<script>
+		(function (w, d, s, l, i) {
+			w[l] = w[l] || [];
+			w[l].push({
+				'gtm.start': new Date().getTime(),
+				event: 'gtm.js'
+			});
+			var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s),
+				dl = l != 'dataLayer' ? '&l=' + l : '';
+			j.async = true;
+			j.src =
+				'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+			f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-52FVS76');
+	</script>
+	<!-- End Google Tag Manager -->
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105675198-1"></script>
 	<script>
@@ -16,7 +36,7 @@
 	</script>
 
 	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-N44SP6L"></script>
-	
+
 	<!-- Mouseflow Heatmap Script -->
 	<script type="text/javascript">
 		window._mfq = window._mfq || [];
@@ -99,6 +119,11 @@
 </head>
 
 <body class="home">
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52FVS76" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 	<!-- Preloader -->
 	<div class="preloader">
