--- a/works_creative.html
+++ b/works_creative.html
@@ -2,19 +2,37 @@
 <html lang="en-US">
 
 <head>
-
+	<!-- Google Tag Manager -->
+	<script>
+		(function (w, d, s, l, i) {
+			w[l] = w[l] || [];
+			w[l].push({
+				'gtm.start': new Date().getTime(),
+				event: 'gtm.js'
+			});
+			var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s),
+				dl = l != 'dataLayer' ? '&l=' + l : '';
+			j.async = true;
+			j.src =
+				'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+			f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-52FVS76');
+	</script>
+	<!-- End Google Tag Manager -->
 	<!-- Mouseflow Heatmap -->
 	<script type="text/javascript">
 		window._mfq = window._mfq || [];
-		(function() {
-		  var mf = document.createElement("script");
-		  mf.type = "text/javascript"; mf.defer = true;
-		  mf.src = "//cdn.mouseflow.com/projects/ae2e15e6-8432-4c0b-a63d-fb97184cd063.js";
-		  document.getElementsByTagName("head")[0].appendChild(mf);
+		(function () {
+			var mf = document.createElement("script");
+			mf.type = "text/javascript";
+			mf.defer = true;
+			mf.src = "//cdn.mouseflow.com/projects/ae2e15e6-8432-4c0b-a63d-fb97184cd063.js";
+			document.getElementsByTagName("head")[0].appendChild(mf);
 		})();
-	  </script>
+	</script>
 
-	  <!-- Global site tag (gtag.js) - Google Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-105675198-1"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -46,7 +64,7 @@
 			a.appendChild(r);
 		})(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
 	</script>
-	
+
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -98,7 +116,10 @@
 </head>
 
 <body>
-
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52FVS76" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<!-- Preloader -->
 	<div class="preloader">
 		<div class="centrize full-width">
