Added ManyChat Widget

--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 		rel="icon" type="image/x-icon" />
 	<!-- <link rel="shortcut icon" href="images/favicons/favicon.ico"> -->
 
+	<!-- ManyChat -->
+<script src="//widget.manychat.com/111058827310896.js" defer="defer"></script>
+<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
+
 </head>
 
 <body class="home">
