--- a/index.html
+++ b/index.html
@@ -291,6 +291,28 @@
 	<script src="js/grained.js"></script>
 	<script src="js/scripts.js"></script>
 
+	<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            xfbml            : true,
+            autoLogAppEvents : true,
+            version          : 'v8.0'
+        });
+    };
+    (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <!-- Your Chat Plugin code -->
+    <div class="fb-customerchat"
+ attribution=setup_tool page_id="102842242179436" ref="XgK3ks" theme_color="#0084FF">
+</div>
+
 </body>
 
 </html>
