--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
     <!-- Your Chat Plugin code -->
     <div class="fb-customerchat"
  attribution=setup_tool page_id="102842242179436" ref="XgK3ks" theme_color="#0084FF">
+ </script>
 </div>
 
 </body>
