Added Set Timeout Function for chatbot

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en-US">
 
 <head>
-<!-- Chatbot -->
-<script>(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);</script>
-	
+	<!-- Chatbot -->
+	<script>
+		setTimeout(function () {
+			(function (p, u, s, h) {
+				p.botId = "1CZtGU";
+				s = u.createElement('script');
+				s.type = 'text/javascript';
+				s.id = "bot-widget-script";
+				s.src = 'https://skybotautomation.com/lib/js/gadget.js';
+				s.setAttribute('bid', "1CZtGU");
+				h = u.getElementsByTagName('script')[0];
+				h.parentNode.insertBefore(s, h);
+			})(window, document);
+		}, 3000);
+	</script>
+
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
@@ -119,8 +132,8 @@
 	<!-- <link rel="shortcut icon" href="images/favicons/favicon.ico"> -->
 
 	<!-- ManyChat -->
-<script src="//widget.manychat.com/111058827310896.js" defer="defer"></script>
-<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
+	<script src="//widget.manychat.com/111058827310896.js" defer="defer"></script>
+	<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
 
 </head>
 
