Fixed SetTimeout Function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 
 <head>
 <!-- Chatbot -->
-<script>(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);</script>
+<script>
+setTimeout(function(){
+	(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);
+}, 3000);//wait 3 seconds
+</script>
 	
 	<!-- Google Tag Manager -->
 	<script>
