--- a/works_creative.html
+++ b/works_creative.html
@@ -266,7 +266,7 @@
 					<div class="box-items portfolio-items">
 
 						<!-- Frontend Bootcamp-->
-						<!--/* <div class="box-item f-gallery">
+						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/frontend-bootcamp" target="_blank"
 									class="has-popup-gallery hover-animated">
@@ -279,7 +279,7 @@
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
 													<span class="category">Responsive Website</span>
-													<span class="name">Employee Dashboard</span>
+													<span class="name">Become a Web Developer</span>
 												</span>
 											</span>
 										</span>
@@ -292,7 +292,7 @@
 									<a href="images/work4.jpg"></a>
 								</div>
 							</div>
-						</div> */-->
+						</div>
 
 						<!-- Employee Dashboard -->
 						<div class="box-item f-gallery">
