--- a/works_creative.html
+++ b/works_creative.html
@@ -270,7 +270,7 @@
 							<div class="image">
 								<a href="https://github.com/anthonys1760/frontend-bootcamp" target="_blank"
 									class="has-popup-gallery hover-animated">
-									<img src="images/frontendbootcamp.png" class="wp-post-image" alt="" />
+									<img src="images/frontendbootcamp.jpg" class="wp-post-image" alt="" />
 									<div class="d-sm-none">
 									</div>
 									<span class="info circle">
