--- a/works_creative.html
+++ b/works_creative.html
@@ -268,6 +268,35 @@
 						<!-- Frontend Bootcamp-->
 						<div class="box-item f-gallery">
 							<div class="image">
+								<a href="https://skybotautomation.com/" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/skybotautomation" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Skybot Automation</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
+							</div>
+						</div>
+
+						<!-- Frontend Bootcamp-->
+						<div class="box-item f-gallery">
+							<div class="image">
 								<a href="https://github.com/anthonys1760/frontend-bootcamp" target="_blank"
 									class="has-popup-gallery hover-animated">
 									<img src="images/frontendbootcamp.jpg" class="wp-post-image" alt="" />
