Updated Project Comment

--- a/works_creative.html
+++ b/works_creative.html
@@ -265,7 +265,7 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
-						<!-- Frontend Bootcamp-->
+						<!-- Skybot Automation -->
 						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://skybotautomation.com/" target="_blank"
