--- a/works_creative.html
+++ b/works_creative.html
@@ -270,7 +270,7 @@
 							<div class="image">
 								<a href="https://skybotautomation.com/" target="_blank"
 									class="has-popup-gallery hover-animated">
-									<img src="images/skybotautomation" class="wp-post-image" alt="" />
+									<img src="images/skybotautomation.jpg" class="wp-post-image" alt="" />
 									<div class="d-sm-none">
 									</div>
 									<span class="info circle">
