Added Live Search Filter Project

--- a/works_creative.html
+++ b/works_creative.html
@@ -265,6 +265,35 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
+							<!-- Live Search Filter -->
+							<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/live-user-filter/" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/live-search-filter.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Vertical Slider</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
+							</div>
+						</div>
+
 							<!-- Vertical Slider -->
 							<div class="box-item f-gallery">
 							<div class="image">
