--- a/works_creative.html
+++ b/works_creative.html
@@ -279,7 +279,7 @@
 												<span class="icon fas fa-images"></span>
 												<span class="desc">
 													<span class="category">Responsive Website</span>
-													<span class="name">Vertical Slider</span>
+													<span class="name">Live Search Filter</span>
 												</span>
 											</span>
 										</span>
