--- a/works_creative.html
+++ b/works_creative.html
@@ -268,7 +268,7 @@
 							<!-- Live Search Filter -->
 							<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/live-user-filter/" target="_blank"
+								<a href="https://github.com/anthonys1760/live-user-filter" target="_blank"
 									class="has-popup-gallery hover-animated">
 									<img src="images/live-search-filter.jpg" class="wp-post-image" alt="" />
 									<div class="d-sm-none">
