Updated Vertical SLide Link

--- a/works_creative.html
+++ b/works_creative.html
@@ -297,7 +297,7 @@
 							<!-- Vertical Slider -->
 							<div class="box-item f-gallery">
 							<div class="image">
-								<a href="https://anthonys1760.github.io/vertical-slider/" target="_blank"
+								<a href="https://github.com/anthonys1760/vertical-slider" target="_blank"
 									class="has-popup-gallery hover-animated">
 									<img src="images/vertical-slider.jpg" class="wp-post-image" alt="" />
 									<div class="d-sm-none">
