--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@ setTimeout(function(){
 					<div class="vertical-center">
 						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
-								Hi, I’m <strong>Anthony</strong>, a Front-End Web Developer <br />
+								Hi, I’m <strong>Anthony</strong>, a Full Stack Web Developer <br />
 								and Designer based in Grand Rapids, Michigan.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>Hello. </p>
+								<p>Hello ;) </p>
 								<p>Welcome to my <strong>Portfolio </strong></p>
 								<p>My name is <strong>Anthony</strong></p>
-								<p>I code professional <strong>websites</strong></p>
+								<p>I'm a Full Stack <strong>Developer</strong></p>
 								<p>I develop useful <strong>web apps</strong></p>
 								<p>I love <strong>javascript</strong></p>
 								<p>I learn <strong>everyday</strong></p>
@@ -255,7 +255,7 @@ setTimeout(function(){
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s">Copyright © 2021 Website by Anthony Smith</p>
+				<p class="animated fadeIn delay-3s">Copywrite © 2022. All Rights Reserved</p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
