--- a/works_creative.html
+++ b/works_creative.html
@@ -265,6 +265,64 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
+					<!-- Tailwind Project
+					<div class="box-item f-gallery">
+						<div class="image">
+							<a href="https://github.com/anthonys1760/tailwind-project" target="_blank"
+								class="has-popup-gallery hover-animated">
+								<img src="images/manage.png" class="wp-post-image" alt="" />
+								<div class="d-sm-none">
+								</div>
+								<span class="info circle">
+									<span class="centrize full-width">
+										<span class="vertical-center">
+											<span class="icon fas fa-images"></span>
+											<span class="desc">
+												<span class="category">Responsive Website</span>
+												<span class="name">Manage Product Page</span>
+											</span>
+										</span>
+									</span>
+								</span>
+							</a>
+							<div id="gallery-1" class="mfp-hide">
+								<a href="images/work1.jpg"></a>
+								<a href="images/work2.jpg"></a>
+								<a href="images/work3.jpg"></a>
+								<a href="images/work4.jpg"></a>
+							</div>
+						</div>
+					</div> -->
+
+					<!-- Skybot Automation -->
+					<div class="box-item f-gallery">
+						<div class="image">
+							<a href="https://skybotautomation.com/" target="_blank"
+								class="has-popup-gallery hover-animated">
+								<img src="images/skybotautomation.jpg" class="wp-post-image" alt="" />
+								<div class="d-sm-none">
+								</div>
+								<span class="info circle">
+									<span class="centrize full-width">
+										<span class="vertical-center">
+											<span class="icon fas fa-images"></span>
+											<span class="desc">
+												<span class="category">Responsive Website</span>
+												<span class="name">Skybot Automation</span>
+											</span>
+										</span>
+									</span>
+								</span>
+							</a>
+							<div id="gallery-1" class="mfp-hide">
+								<a href="images/work1.jpg"></a>
+								<a href="images/work2.jpg"></a>
+								<a href="images/work3.jpg"></a>
+								<a href="images/work4.jpg"></a>
+							</div>
+						</div>
+					</div>
+
 					<!-- Cloud Hosting Service -->
 					<div class="box-item f-gallery">
 					<div class="image">
@@ -352,34 +410,6 @@
 							</div>
 						</div>
 
-						<!-- Skybot Automation -->
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="https://skybotautomation.com/" target="_blank"
-									class="has-popup-gallery hover-animated">
-									<img src="images/skybotautomation.jpg" class="wp-post-image" alt="" />
-									<div class="d-sm-none">
-									</div>
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Responsive Website</span>
-													<span class="name">Skybot Automation</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-1" class="mfp-hide">
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
-									<a href="images/work4.jpg"></a>
-								</div>
-							</div>
-						</div>
 
 						<!-- Frontend Bootcamp-->
 						<div class="box-item f-gallery">
