Added Power Gym Project Tailwind

--- a/works_creative.html
+++ b/works_creative.html
@@ -204,7 +204,7 @@
 							<h1 class="h-title">Portfolio</h1>
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-subtitle" style="display: none;">
-									<p>Hello. </p>
+									<p>Hello There! </p>
 									<p>Welcome To My <strong>Portfolio </strong></p>
 									<p>My name is <strong>Anthony Smith</strong></p>
 									<p>I code cool <strong>websites</strong></p>
@@ -265,7 +265,7 @@
 					<!-- Responsive Websites -->
 					<div class="box-items portfolio-items">
 
-					<!-- Tailwind Project
+						<!-- Tailwind Project
 					<div class="box-item f-gallery">
 						<div class="image">
 							<a href="https://github.com/anthonys1760/tailwind-project" target="_blank"
@@ -294,66 +294,95 @@
 						</div>
 					</div> -->
 
-					<!-- Skybot Automation -->
-					<div class="box-item f-gallery">
-						<div class="image">
-							<a href="https://skybotautomation.com/" target="_blank"
-								class="has-popup-gallery hover-animated">
-								<img src="images/skybotautomation.jpg" class="wp-post-image" alt="" />
-								<div class="d-sm-none">
-								</div>
-								<span class="info circle">
-									<span class="centrize full-width">
-										<span class="vertical-center">
-											<span class="icon fas fa-images"></span>
-											<span class="desc">
-												<span class="category">Responsive Website</span>
-												<span class="name">Skybot Automation</span>
+						<!-- Skybot Automation -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://skybotautomation.com/" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/skybotautomation.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Skybot Automation</span>
+												</span>
 											</span>
 										</span>
 									</span>
-								</span>
-							</a>
-							<div id="gallery-1" class="mfp-hide">
-								<a href="images/work1.jpg"></a>
-								<a href="images/work2.jpg"></a>
-								<a href="images/work3.jpg"></a>
-								<a href="images/work4.jpg"></a>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
 							</div>
 						</div>
-					</div>
 
-					<!-- Cloud Hosting Service -->
-					<div class="box-item f-gallery">
-					<div class="image">
-						<a href="https://github.com/anthonys1760/Loruki-cloud-hosting" target="_blank"
-							class="has-popup-gallery hover-animated">
-							<img src="images/loruki.jpg" class="wp-post-image" alt="" />
-							<div class="d-sm-none">
-							</div>
-							<span class="info circle">
-								<span class="centrize full-width">
-									<span class="vertical-center">
-										<span class="icon fas fa-images"></span>
-										<span class="desc">
-											<span class="category">Responsive Website</span>
-											<span class="name">Cloud Hosting Service</span>
+						<!-- Cloud Hosting Service -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://github.com/anthonys1760/Loruki-cloud-hosting" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/loruki.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Cloud Hosting Service</span>
+												</span>
+											</span>
 										</span>
 									</span>
-								</span>
-							</span>
-						</a>
-						<div id="gallery-1" class="mfp-hide">
-							<a href="images/work1.jpg"></a>
-							<a href="images/work2.jpg"></a>
-							<a href="images/work3.jpg"></a>
-							<a href="images/work4.jpg"></a>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
+							</div>
 						</div>
-					</div>
-				</div>
 
-							<!-- Live Search Filter -->
-							<div class="box-item f-gallery">
+						<!-- Power Gym -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://github.com/anthonys1760/power-gym" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/power.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">Power Gym</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
+							</div>
+						</div>
+
+						<!-- Live Search Filter -->
+						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/live-user-filter" target="_blank"
 									class="has-popup-gallery hover-animated">
@@ -381,8 +410,8 @@
 							</div>
 						</div>
 
-							<!-- Vertical Slider -->
-							<div class="box-item f-gallery">
+						<!-- Vertical Slider -->
+						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="https://github.com/anthonys1760/vertical-slider" target="_blank"
 									class="has-popup-gallery hover-animated">
