Updated Typing Text

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 <!-- Chatbot -->
-<script>
+<!-- <script>
 setTimeout(function(){
 	(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);
 }, 8000);//wait 3 seconds
-</script>
+</script> -->
 	
 	<!-- Google Tag Manager -->
 	<script>
@@ -234,14 +234,17 @@ setTimeout(function(){
 								and Designer based in Grand Rapids, Michigan.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
-								<p>Hello ;) </p>
+								<p>Hi There!</p>
 								<p>Welcome to my <strong>Portfolio </strong></p>
 								<p>My name is <strong>Anthony</strong></p>
 								<p>I'm a Full Stack <strong>Developer</strong></p>
-								<p>I develop useful <strong>web apps</strong></p>
+								<p>I'm also a Code <strong>Mentor</strong></p>
+								<p>I develop useful <strong>websites and applications</strong></p>
 								<p>I love <strong>javascript</strong></p>
 								<p>I learn <strong>everyday</strong></p>
 								<p>I solve <strong>problems</strong></p>
+								<p>I create intelligent<strong>chatbots...</strong></p>
+								<p>And also other cool<strong>applications</strong></p>
 							</div>
 							<span class="typed-subtitle"></span>
 						</div>
