Added Code Mentor Badges

--- a/about.html
+++ b/about.html
@@ -249,25 +249,21 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p class="animated fadeIn delay-5s">Hello! I'm a Front-End Web Developer that has experience
-							working on everything from small business websites to mid-high volume media applications. I
-							have been working professionally as a front end developer for nearly 4 years. I'm
-							comfortable doing everything from basic HTML coding tasks all the way to custom Javascript
-							and more.</p>
+						<p class="animated fadeIn delay-5s">Experienced Senior Full-Stack Web Developer with real world industry experience building high quality websites and web applications for large, medium, and small companies all over the world. I specialize in JavaScript and have worked for some of the biggest corporations in the world with the most recent being the American multinational automobile manufacturer known as Ford Motor Company. In addition, I have helped over 54,000 developers worldwide solve over 71,000 real world programming problems as a Code Mentor and Open Source Contributor. Take a look at some of my previous work and get in touch today!</p>
 						<div class="info-list">
 							<ul>
 
 								<li><strong>Residence:</strong> USA</li>
 								<li><strong>Address:</strong> Grand Rapids</li>
-								<li><strong>Phone:</strong> 616-272-2169</li>
+								<!-- <li><strong>Phone:</strong> 616-272-2169</li> -->
 								<li><strong>E-mail:</strong> anthony.smith1760@gmail.com</li>
 							</ul>
 						</div>
 						<div class="bts">
-							<a href="#" class="btn hover-animated">
+							<!-- <a  style="margin-right: 5 !important;" href="#" class="btn hover-animated"> -->
 								<span class="circle"></span>
-								<span class="lnk">Download CV</span>
-							</a>
+								<a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a>
+							<!-- </a> -->
 						</div>
 					</div>
 
@@ -300,9 +296,8 @@
 						<div class="service-col">
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-ad"></span></div>
-								<div class="name">HTML Email Development</div>
-								<div class="text">Advertising services such as HTML Email Development for marketing
-									campaigns.</div>
+								<div class="name">Code Mentorship</div>
+								<div class="text">Offering instant one-on-one help for software developers by utilizing screen sharing, video and text chat, in order to replicate for users the experience of having a mentor for code reviewing, debugging, and online programming.</div>
 							</div>
 						</div>
 
@@ -310,8 +305,10 @@
 						<div class="service-col">
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-camera"></span></div>
-								<div class="name">Photography</div>
-								<div class="text">Photography services that bring life you your world.</div>
+								<div class="name">Chatbot Development</div>
+								<div class="text">I will build an Intelligent Chatbot which will increase your business income by capturing all incoming leads. This chatbot will help you make your business run easier and faster
+									and also reduce stress by implementing a A.I. chatbot for your business that will answer customer messages for you 24/7.
+									This messenger bot will handle all leads for you and will notify you when a new lead comes in.</div>
 							</div>
 						</div>
 
@@ -857,7 +854,7 @@
 	-->
 			<footer class="footer">
 				<div class="copy">
-					<p>E: anthony.smith1760@gmail.com</p>
+					<p><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
 
 				</div>
 				<div class="soc-box">
