--- a/contacts_image.html
+++ b/contacts_image.html
@@ -320,7 +320,7 @@
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p>Copyright © 2020 Website by Anthony Smith</p>
+				<p><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
 
 			</div>
 			<div class="soc-box">
