--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ setTimeout(function(){
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s">Copywrite © 2022. All Rights Reserved</p>
+				<p class="animated fadeIn delay-3s"><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
