--- a/works_creative.html
+++ b/works_creative.html
@@ -1664,7 +1664,7 @@
 				</div>
 				<hr>
 				<footer>
-					<p align="center" ;>Copyright © 2020 Website Developed by Anthony Smith</p>
+					<p align="center" ;><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
 				</footer>
 
 				<!-- Scripts -->
