--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 
 <head>
 
-<!-- Chatbot -->
-<!-- <script src="//code.tidio.co/jybbrvc7f9az8ss3jvq9cusjxz8qjsix.js" async></script> -->
-<!-- <script>
+	<!-- Converto Chatbot -->
+	<script>
+		(function (p, u, s, h) {
+			p.botId = "vnrjaj";
+			s = u.createElement('script');
+			s.type = 'text/javascript';
+			s.id = "bot-widget-script";
+			s.src = 'https://app.convertobot.com/lib/js/gadget.js';
+			s.setAttribute('bid', "vnrjaj");
+			h = u.getElementsByTagName('script')[0];
+			h.parentNode.insertBefore(s, h);
+		})(window, document);
+	</script>
+	<!-- <script src="//code.tidio.co/jybbrvc7f9az8ss3jvq9cusjxz8qjsix.js" async></script> -->
+	<!-- <script>
 setTimeout(function(){
 	(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);
 }, 8000);//wait 3 seconds
 </script> -->
-	
+
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
@@ -125,8 +137,8 @@ setTimeout(function(){
 	<!-- <link rel="shortcut icon" href="images/favicons/favicon.ico"> -->
 
 	<!-- ManyChat -->
-<script src="//widget.manychat.com/111058827310896.js" defer="defer"></script>
-<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
+	<script src="//widget.manychat.com/111058827310896.js" defer="defer"></script>
+	<script src="https://mccdn.me/assets/js/widget.js" defer="defer"></script>
 
 </head>
 
@@ -260,7 +272,9 @@ setTimeout(function(){
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
-				<p class="animated fadeIn delay-3s"><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg" alt="Codementor badge"></a></p>
+				<p class="animated fadeIn delay-3s"><a href="https://www.codementor.io/@anthonys1760?refer=badge"><img
+							src="https://www.codementor.io/m-badges/anthonys1760/book-session.svg"
+							alt="Codementor badge"></a></p>
 			</div>
 			<div class="soc-box animated flipInY delay-5s">
 				<div class="follow-label">View My Live Code on Github</div>
