--- a/about.html
+++ b/about.html
@@ -3,6 +3,20 @@
 
 <head>
 
+	<!-- Converto Chatbot -->
+	<script>
+		(function (p, u, s, h) {
+			p.botId = "vnrjaj";
+			s = u.createElement('script');
+			s.type = 'text/javascript';
+			s.id = "bot-widget-script";
+			s.src = 'https://app.convertobot.com/lib/js/gadget.js';
+			s.setAttribute('bid', "vnrjaj");
+			h = u.getElementsByTagName('script')[0];
+			h.parentNode.insertBefore(s, h);
+		})(window, document);
+	</script>
+
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
