Updated background video

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ setTimeout(function(){
 
 				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg"
 					class="video-bg media-bg jarallax-video video-mobile-bg"
-					data-jarallax-video="https://youtu.be/KGlWaG4N4L8" data-mobile-preview="images/started_image_p.jpg"
+					data-jarallax-video="https://youtu.be/qL1LzOm5Q_E" data-mobile-preview="images/started_image_p.jpg"
 					data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
