Added delay typing animation

--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@ setTimeout(function(){
 
 <body class="home">
 
+	<script>
+		// setTimeout(function () {
+		// 	$('.typed-subtitle').toggle();
+		// 	console.log('Subtitle Removed');
+		// }, 500);
+
+		// setTimeout(function () {
+		// 	$('.typed-subtitle').toggle();
+		// 	console.log('Subtitle Added');
+		// }, 4000);
+	</script>
+
 	<!-- Google Tag Manager (noscript) -->
 	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-52FVS76" height="0" width="0"
 			style="display:none;visibility:hidden"></iframe></noscript>
@@ -233,7 +245,7 @@ setTimeout(function(){
 
 				<div autoplay="autoplay" loop="loop" playsinline loop muted id="started-video-bg"
 					class="video-bg media-bg jarallax-video video-mobile-bg"
-					data-jarallax-video="https://youtu.be/qL1LzOm5Q_E" data-mobile-preview="images/started_image_p.jpg"
+					data-jarallax-video="https://youtu.be/AtJN0dtx2Tk" data-mobile-preview="images/started_image_p.jpg"
 					data-volume="0">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
@@ -260,7 +272,7 @@ setTimeout(function(){
 								<p>I create intelligent<strong> chatbots...</strong></p>
 								<p>And also other cool<strong> applications</strong></p>
 							</div>
-							<span class="typed-subtitle"></span>
+							<span class="typed-subtitle animated fadeIn delay-5s"></span>
 						</div>
 					</div>
 				</div>
