--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!-- Converto Chatbot -->
 	<script>
-		(function (p, u, s, h) {
+			(function (p, u, s, h) {
 			p.botId = "vnrjaj";
 			s = u.createElement('script');
 			s.type = 'text/javascript';
@@ -92,7 +92,7 @@ setTimeout(function(){
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<!-- Title -->
-	<title>Anthony Smith | Front-End Web Developer</title>
+	<title>Anthony Smith | Full-Stack Web Developer</title>
 
 	<!-- Fonts -->
 	<link
