Updated contact page

--- a/contacts_image.html
+++ b/contacts_image.html
@@ -16,7 +16,7 @@
 			h.parentNode.insertBefore(s, h);
 		})(window, document);
 	</script>
-	
+
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
@@ -258,7 +258,7 @@
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-phone"></span></div>
 								<div class="name">Phone</div>
-								<div class="text">616-272-2169</div>
+								<div class="text">Click Chatbot for number</div>
 							</div>
 						</div>
 
@@ -294,16 +294,16 @@
 			</div>
 
 			<!-- Section Contacts Form -->
-			<div class="section contacts" id="section-contacts">
-				<div class="content">
+			<!-- <div class="section contacts" id="section-contacts">
+				<div class="content"> -->
 
 					<!-- title -->
-					<div class="title">
+					<!-- <div class="title">
 						<div class="title_inner">Contact Form</div>
-					</div>
+					</div> -->
 
 					<!-- form -->
-					<div class="contact_form content-box">
+					<!-- <div class="contact_form content-box">
 						<form id="cform" method="post">
 							<div class="group-val">
 								<input type="text" name="name" placeholder="Name" />
@@ -324,7 +324,7 @@
 						<div class="alert-success">
 							<p>Thanks, your message is sent successfully.</p>
 						</div>
-					</div>
+					</div> -->
 
 				</div>
 				<div class="clear"></div>
