--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
 		})(window, document);
 	</script>
 	<!-- <script src="//code.tidio.co/jybbrvc7f9az8ss3jvq9cusjxz8qjsix.js" async></script> -->
-	<!-- <script>
-setTimeout(function(){
-	(function(p,u,s,h){p.botId = "1CZtGU";s=u.createElement('script');s.type='text/javascript';s.id="bot-widget-script";s.src='https://app.convertobot.com/lib/js/gadget.js';s.setAttribute('bid',"1CZtGU");h=u.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);})(window,document);
-}, 8000);//wait 3 seconds
-</script> -->
-
+	
 	<!-- Google Tag Manager -->
 	<script>
 		(function (w, d, s, l, i) {
@@ -154,6 +149,11 @@ setTimeout(function(){
 		// 	$('.typed-subtitle').toggle();
 		// 	console.log('Subtitle Added');
 		// }, 4000);
+	</script>
+
+	<script>
+		// const chatbot = document.querySelector('#chat-box-gadget, #chat-gadget');
+		// chatbot.classList.add('animate__animated', 'animate__bounceOutLeft');
 	</script>
 
 	<!-- Google Tag Manager (noscript) -->
