--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 									.typeString('I create web apps that bring you <span style="color: #4bffa5;">revenue</span>')
 									.pauseFor(1000)
 									.deleteChars(40)
+									.pauseFor(1000)
 									.typeString('Click on the <span style="color: #4bffa5;">Chatbot</span> for questions')
 									.pauseFor(1000)
 									.deleteChars(34)
