Updated main text

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 						<div class="started-content delay-5s">
 							<h1 class="h-title animated fadeIn delay-5s">
 								Hi, I’m <strong>Anthony</strong>, a Full Stack Web Developer <br />
-								and Designer based in Grand Rapids, Michigan.
+								from Grand Rapids, USA.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
 								<p>Hi There!</p>
