Added new project

--- a/works_creative.html
+++ b/works_creative.html
@@ -310,6 +310,8 @@
 						</div>
 					</div> -->
 
+					<!-- TODO: Need to add buttons that say Demo | Github Repo to each project -->
+
 						<!-- Skybot Automation -->
 						<div class="box-item f-gallery">
 							<div class="image">
@@ -325,6 +327,35 @@
 												<span class="desc">
 													<span class="category">Responsive Website</span>
 													<span class="name">Skybot Automation</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+								<div id="gallery-1" class="mfp-hide">
+									<a href="images/work1.jpg"></a>
+									<a href="images/work2.jpg"></a>
+									<a href="images/work3.jpg"></a>
+									<a href="images/work4.jpg"></a>
+								</div>
+							</div>
+						</div>
+
+						<!-- App Villa -->
+						<div class="box-item f-gallery">
+							<div class="image">
+								<a href="https://anthonys1760.github.io/app-villa/" target="_blank"
+									class="has-popup-gallery hover-animated">
+									<img src="images/Medium_Black.jpg" class="wp-post-image" alt="" />
+									<div class="d-sm-none">
+									</div>
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-images"></span>
+												<span class="desc">
+													<span class="category">Responsive Website</span>
+													<span class="name">AppVilla</span>
 												</span>
 											</span>
 										</span>
