--- a/works_creative.html
+++ b/works_creative.html
@@ -315,7 +315,7 @@
 					<!-- Skynet Automation -->
 					<div class="box-item f-gallery">
 						<div class="image">
-							<a href="https://anthonys1760.github.io/skynetVPN/public/index.html" target="_blank"
+							<a href="https://anthonys1760.github.io/skynetVPN/index.html" target="_blank"
 								class="has-popup-gallery hover-animated">
 								<img src="images/skynetvpn.jpg" class="wp-post-image" alt="" />
 								<div class="d-sm-none">
