Added Blog Section

--- a/contacts_image.html
+++ b/contacts_image.html
@@ -199,6 +199,9 @@
 
 								</li>
 								<li class="menu-item menu-item-has-children">
+									<a href="https://tonystechblog.net/" target="_blank">Blog</a>
+								</li>
+								<li class="menu-item menu-item-has-children">
 									<a href="contacts_image.html">Contact</a>
 
 								</li>
