--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
 								</li>
 								<li class="menu-item menu-item-has-children">
 									<a href="works_creative.html">Portfolio</a>
-
+								</li>
+								<li class="menu-item menu-item-has-children">
+									<a href="https://tonystechblog.net/" target="_blank">Blog</a>
+								</li>
 								<li class="menu-item menu-item-has-children">
 									<a href="contacts_image.html">Contact</a>
 
