--- a/about.html
+++ b/about.html
@@ -199,6 +199,10 @@
 								</li>
 
 								<li class="menu-item menu-item-has-children">
+									<a href="https://tonystechblog.net/" target="_blank">Blog</a>
+								</li>
+
+								<li class="menu-item menu-item-has-children">
 									<a href="works_creative.html">Portfolio</a>
 
 
