--- a/works_creative.html
+++ b/works_creative.html
@@ -184,7 +184,9 @@
 									<a href="works_creative.html">Portfolio</a>
 
 
-
+									<li class="menu-item menu-item-has-children">
+										<a href="https://tonystechblog.net/" target="_blank">Blog</a>
+									</li>
 
 								<li class="menu-item menu-item-has-children">
 									<a href="contacts_image.html">Contact</a>
