Added Monetization to head

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+	<meta name="monetization" content="$ilp.uphold.com/DhLxZwEiabGU">
 
 	<!-- Title -->
 	<title>Anthony Smith | Full-Stack Web Developer</title>
