Updated Blog Link

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="monetization" content="$ilp.uphold.com/DhLxZwEiabGU">
+	<meta name="description" content="portfolio">
+	<meta name="keywords" content="portfolio, portfolio template, website portfolios, website development, web development site, jobs web development, development website">
 
 	<!-- Title -->
 	<title>Anthony Smith | Full-Stack Web Developer</title>
@@ -294,7 +296,7 @@
 									<a href="works_creative.html">Portfolio</a>
 								</li>
 								<li class="menu-item menu-item-has-children">
-									<a href="https://tonystechblog.net/" target="_blank">Technical Blog</a>
+									<a href="https://anthonysmith.hashnode.dev/" target="_blank">Technical Blog</a>
 								</li>
 								<li class="menu-item menu-item-has-children">
 									<a href="https://www.codegrepper.com/profile/anthony-smith" target="_blank">Code Grepper</a>
