--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
 								</li>
 
 								<li class="menu-item menu-item-has-children">
-									<a href="https://tonystechblog.net/" target="_blank">Blog</a>
+									<a href="https://anthonysmith.hashnode.dev/" target="_blank">Blog</a>
 								</li>
 
 								<li class="menu-item menu-item-has-children">
